# crunchyroll-helper

./: LICENSE  README.md  crunchyroll-helper.cabal
src/: Lib.hs
