name:                crunchyroll-helper
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jean-lopes/crunchyroll-helper#readme
license:             BSD3
license-file:        LICENSE
author:              Jean Carlo Giambastiani Lopes
maintainer:          jean.lopes@hotmail.com.br
copyright:           Copyright: (c) 2016 Jean Carlo Giambastiani Lopes
category:            tools
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , process
                     , filepath
                     , HTTP
                     , regex-posix
                     , tagsoup
  default-language:    Haskell2010

executable crunchyroll-helper-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , crunchyroll-helper
  default-language:    Haskell2010

test-suite crunchyroll-helper-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , crunchyroll-helper
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jean-lopes/crunchyroll-helper
